--- a/themes/zdoc/layouts/partials/navbar/navbar.html
+++ b/themes/zdoc/layouts/partials/navbar/navbar.html
@@ -20,9 +20,9 @@
         <!-- <div id="mobileSearch" class="hide">
           {{ partial "navbar/search/site-search-mobile.html" . }}
         </div> -->
-        <div class="navbar__icons">
+        <!-- <div class="navbar__icons">
           {{ partial "navbar/icons/select-lang.html" . }}  
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
