--- a/themes/zdoc/layouts/partials/main/sections/single-menu.html
+++ b/themes/zdoc/layouts/partials/main/sections/single-menu.html
@@ -1,7 +1,7 @@
 <div class="menu">  
   <ul>
     {{ $root := . }}
-    {{ range (.Site.GetPage "section" .Type).Pages }}
+    {{ range .Site.Sections }}
       {{ template "render-menu" (dict "ctx" . "root" $root "depth" 0)}}
     {{ end }}
   </ul>
